--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,61 @@
-# Remix compiler artifacts
-**/artifacts/
-**/artifacts/**
+# Compiler files
+cache/
+out/
 
-# Remix plugin state folders
-deps/
-states/
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
 
-# Debug info
-*.dbg.json
-*.tsbuildinfo
+# Docs
+docs/
 
-# Optional
+# Dotenv file
+.env
+
+# Foundry artifacts
+out/
+cache/
+broadcast/
+
+# Dependencies
+lib/
+!lib/openzeppelin/ # Исключаем OpenZeppelin из игнорирования
+
+# Environment files
 .env
 .env.local
+.env.development
+.env.test
+
+# IDE specific
+.vscode/
+.idea/
+
+# Build files
+forge-artifacts/
+coverage/
+coverage.json
+
+# Foundry config overrides
+foundry.toml.local
+
+# Test artifacts
+test-results/
+
+# Documentation
+docs/_build/
+
+# MacOS
+.DS_Store
+
+# Node (если используется)
+node_modules/
+package-lock.json
+
+# Для remappings (если используются локальные пути)
+remappings.txt
+
+# Автогенерируемые файлы
+*.sol.js
+metadata/
